<resources>
    <string name="app_name">Decise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="password_required">Password<font color="#FF3D00">*</font></string>
    <string name="new_password_required">New Password<font color="#FF3D00">*</font></string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="phone_number_is_required">Phone Number is required</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="last_name_required">Last Name<font color="#FF3D00">*</font></string>
    <string name="first_name_is_required">First name is required</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="first_name_required">First Name<font color="#FF3D00">*</font></string>
    <string name="email_require_star">Email<font color="#FF3D00">*</font></string>
    <string name="email">Email</string>
    <string name="email_is_required">Email is required</string>
    <string name="password">Password</string>
    <string name="password_require_star">Password<font color="#FF3D00">*</font></string>
    <string name="password_is_required">Password is required</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with_google_account">or login with Google Account</string>
    <string name="enter_password">Enter password</string>
    <string name="password_is_required_warning">Password is required</string>
    <string name="confirm_password_star">Confirm Password<font color="#FF3D00">*</font></string>
    <string name="enter_repeat_password">Enter repeat password</string>
    <string name="complete">Complete</string>
    <string name="one_lowercase_character">One lowercase character</string>
    <string name="sign_me_up">Sign Me Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="one_number">One number</string>
    <string name="_8_characters_minimum">8 characters minimum</string>
    <string name="special_characters">Special characters</string>
    <string name="confirm_password_is_required">Confirm Password is Required</string>
    <string name="personal_sub_type_details_text">5 Decisions\n1 User\n2 Guests\n6 Decision SubTypes\nTechnical Support - Knowledge Base Access\n2GB Storage\nMachine Learning</string>
    <string name="entrepreneur_sub_type_details_text">20 Decisions\<n />Up to 2 Users\n10 Guests\n6 Decision SubTypes\nTechnical Support - Knowledge Base Access\n2GB Storage\nMachine Learning</string>
    <string name="see_details">See Details</string>
    <string name="you_have_selected_the_entrepreneur_subscription_nyou_will_be_charged_39_per_month_per_user_after_your_free_trial_ends">You have selected the <font color="#FF6D00">Entrepreneur</font> subscription\nYou will be charged <font color="#FF6D00">$39 per month</font> per User after your free trial ends</string>
    <string name="cvv">CVV<font color="#FF3D00">*</font></string>
    <string name="expiry">Expiry<font color="#FF3D00">*</font></string>
    <string name="card_holder_s_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number<font color="#FF3D00">*</font></string>
    <string name="this_field_is_required">This field is required</string>
    <string name="monthly">Monthly</string>
    <string name="select">Select</string>
    <string name="per_user">PER USER</string>
    <string name="for_personal_use">For personal use</string>
    <string name="business">Business</string>
    <string name="_0">$0</string>
    <string name="for_startup_teams">For startup teams</string>
    <string name="entrepreneur">Entrepreneur</string>
    <string name="free">Free</string>
    <string name="personal">Personal</string>
    <string name="enterprise">Enterprise</string>
    <string name="first_name">First Name</string>
    <string name="lastname">LastName</string>
    <string name="update">Update</string>
    <string name="general_information">General Information</string>
    <string name="current_password">Current Password<font color="#FF3D00">*</font></string>
    <string name="one_uppercase_character">One uppercase character</string>
    <string name="password_matched">Password matched</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="current_password_is_required">Current password is required</string>
    //Message
    <string name="no_internet_connection">No Internet Connection !</string>
    <string name="no_internet_msg">Please activate your internet connection and try again</string>

    //.........................................RUNTIME Permission..
    <string name="permission_required">Permission Required</string>
    <string name="permission_msg_contact">Contact Permission is required to use this feature</string>
    <string name="permission_sms_contact">SMS Permission is required to use this feature</string>
    <string name="permission_call_phone_one">Phone call permission is required to use this feature</string>
    <string name="permission_call_phone_two">Phone call permission is required to use this feature</string>

    <string name="permission_msg_sms">SMS permission is required to use this feature</string>
    <string name="permission_msg_for_location">Location permit is required to use this app</string>

    <string name="permission_contact_denied_one">Contact permit is required to use this feature</string>
    <string name="permission_contact_denied_two">Contact permit is required to use this feature</string>

    <string name="permission_storage_denied_one">Storage permission is required to use this feature</string>
    <string name="permission_storage_denied_two">Storage permission is required to use this feature</string>

    <string name="permission_camera_denied_one">Camera permission is required to use this feature</string>
    <string name="permission_msg_for_camera">Camera and Storage permission are required to use this feature
    </string>
    <string name="permission_camera_denied_two">Camera permission is required to use this feature</string>

    <string name="permission_to_save_image_one">Storage permission is required to use this feature</string>
    <string name="permission_to_save_image_two">Storage permission is required to use this feature</string>

    <string name="permission_for_notification">Notification permission is required to get Notifications</string>


    // Button
    <string name="cancel">Cancel</string>
    <string name="button_not_now">Not Now</string>
    <string name="button_update">Update Now</string>
    <string name="buttoin_continue">Continue</string>
    <string name="button_next">Next</string>
    <string name="btn_dont_allow">Don\'t Allow</string>
    <string name="next" translatable="false">Submit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="register">Submit</string>
    <string name="btn_search">Search</string>
    <string name="okay">Okay</string>
    <string name="ok">OK</string>
    <string name="details_btn">Details</string>
    <string name="btn_retry">Retry</string>
    <string name="select_the_company_you_would_like_to_enter">Select the company you would like to enter</string>
    <string name="your_company">Your Company</string>
    <string name="my_company">My Company</string>
    <string name="others_company">Others Company</string>
    <string name="job_title">Job Title</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="job_title_has_not_yet_been_added_by_the_admin">Job Title has not yet been added by the Admin</string>
    <string name="department">Department</string>
    <string name="department_has_not_yet_been_added_by_the_admin">Department has not yet been added by the Admin</string>
    <string name="decisions_group">Decisions Group</string>
    <string name="decision_has_not_yet_been_added_by_the_admin">Decision has not yet been added by the Admin</string>
    <string name="change_password">Change Password</string>
    <string name="decise_role">Decise Role</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_job">Select Job Title</string>
    <string name="select_department">Select Department</string>
    <string name="select_decision_group">Select Decision Group</string>

</resources>