<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolbarSignUp"
                layout="@layout/toolbar_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_reg_bg"
                android:contentDescription="@string/todo"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/card_view_shape"
                android:padding="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarSignUp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/black"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_medium"
                        android:gravity="center"
                        android:text="@string/sign_me_up"
                        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                        android:textColor="@color/orange_light" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:src="@drawable/progress2" />

                    <TextView
                        style="@style/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name_required" />

                    <EditText
                        android:id="@+id/firstName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:drawablePadding="4dp"
                        android:background="@drawable/background_edit_text"
                        android:drawableStart="@drawable/ic_person"
                        android:hint="@string/enter_first_name"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/firstNameWarning"
                        style="@style/warningText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name_is_required"
                        android:visibility="gone" />

                    <TextView
                        style="@style/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        android:text="@string/last_name_required" />

                    <EditText
                        android:id="@+id/lastName"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:background="@drawable/background_edit_text"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="4dp"
                        android:hint="@string/enter_last_name"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/lastNameWarning"
                        style="@style/warningText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name_is_required"
                        android:visibility="gone" />


                    <TextView
                        style="@style/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="6dp"
                        android:text="@string/password_required" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:endIconDrawable="@drawable/custom_eye"
                        app:endIconMode="password_toggle"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            style="@style/editTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:drawablePadding="4dp"
                            android:background="@drawable/background_edit_text"
                            android:drawableStart="@drawable/baseline_lock_24"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/passwordWarning"
                        style="@style/warningText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_is_required_warning"
                        android:visibility="gone" />


                    <TextView

                        style="@style/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="6dp"
                        android:text="@string/confirm_password_star" />

                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:endIconDrawable="@drawable/custom_eye"
                        app:endIconMode="password_toggle"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPassword"
                            style="@style/editTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:drawablePadding="4dp"
                            android:background="@drawable/background_edit_text"
                            android:drawableStart="@drawable/baseline_lock_24"
                            android:hint="@string/enter_repeat_password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/confirmPasswordWarning"
                        style="@style/warningText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password_is_required"
                        android:visibility="gone" />
                    <!--            One lowercase character-->
                    <TextView
                        android:layout_marginTop="8dp"
                        android:id="@+id/oneLowerCaseText"
                        style="@style/passwordValidateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one_lowercase_character" />
                    <!--            One uppercase character-->

                    <TextView
                        android:id="@+id/oneUpperCaseText"
                        style="@style/passwordValidateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="One uppercase character" />

                    <!--            One number-->

                    <TextView
                        android:id="@+id/oneNumberText"
                        style="@style/passwordValidateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/one_number" />

                    <!--            8 characters minimum-->

                    <TextView
                        android:id="@+id/eightNumberTextLength"
                        style="@style/passwordValidateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_8_characters_minimum" />


                    <!--            Special characters minimum-->

                    <TextView
                        android:id="@+id/specialCharacters"
                        style="@style/passwordValidateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/special_characters" />
                    <!--            Password Matched-->
                    <TextView
                        android:id="@+id/passwordMatching"
                        style="@style/passwordValidateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Password matched" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signUpCompleteBtn"
                        style="@style/primaryButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_primary_bg_orange_disable"
                        android:text="@string/complete" />


                </LinearLayout>


            </FrameLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminateTint="@color/orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>